# qt_hieronymus_desktop_pets

./: Avatar.qml  CMakeLists.txt  Main.qml  MenuWindow.qml  Naxida.qml  README.md  main.cpp  mainwindow_events.h  naxida_actions.h
